# file-processor

./: CMakeLists.txt  fileprocessor.cpp  fileprocessor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
